Hotfix some styling issues, as discovered on iPhone 5C

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -96,7 +96,8 @@ h2.ui.header, h3.ui.header, h4.ui.header, h5.ui.header {
 .ui.grid > .row > img.splash-logo,
 .ui.grid > .row > .column > img.splash-logo {
   margin-top: 7%;
-  width: 80%;
+  margin-bottom: 0.6em;
+  width: 50%;
   max-width: 250px;
 }
 
@@ -105,7 +106,7 @@ h2.ui.header, h3.ui.header, h4.ui.header, h5.ui.header {
   and (max-device-width: 667px) {
   .ui.grid > .row > img.splash-logo,
   .ui.grid > .row > .column > img.splash-logo {
-    margin-top: 0;
+    margin-top: -3%;
   }
 }
 
@@ -196,7 +197,7 @@ h2.ui.header, h3.ui.header, h4.ui.header, h5.ui.header {
 
   .scroll-container {
     width: 100%;
-    height: calc(95vh);
+    height: calc(102vh);
     margin-top:  45px !important;
     margin-left:  0   !important;
     margin-right: 0   !important;
